Switch to lombok for apache-http
- Add UI Validation annotations
- Where they have sensible default remove @NotNull annotations
with a new method which provides the default via defaultIfNull
- Remove tests where we explicitly test for Args.notNull behaviour